# cox-mod-manager

./: .gitignore  pyproject.toml
cox_mod_manager/: context.py  json.py  main.py  mod.py  utility.py
tests/: conftest.py  test_context.py  test_json.py  test_main.py  test_mod.py  test_utility.py
