[tool.poetry]
name = "cox-mod-manager"
version = "0.1.0"
description = ""
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.782"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
